Various fixes, added GitHub Link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Gary Williams - www.gwilliams94.co.uk</title>
 <link rel="stylesheet" href="styles.css">
-<!--Icons made by Freepik from Flaticon. Flaticon.com is licensed by Creative Commons 3.0--!>
+<!-Icons made by Freepik from Flaticon. Flaticon.com is licensed by Creative Commons 3.0-!>
 </head>
 <body>
 
@@ -33,12 +33,9 @@
 &nbsp &nbsp &nbsp &nbsp
 <a href="https://open.spotify.com/user/gwilliams94" target=_blank><img border="0" alt="Spotify" src="./images/spotify.png" width="50" height="50"></a>
 &nbsp &nbsp &nbsp &nbsp
+<a href="https://github.com/thisgeektweets" target=_blank><img border="0" alt="Github" src="./images/github.png" width="50" height="50"></a>
+&nbsp &nbsp &nbsp &nbsp
 <a href="https://cloud.gwilliams94.co.uk/index.php/s/FTbpNx7LNj25sST" target=_blank><img border="0" alt="My CV" src="./images/cv.png" width="50" height="50"></a>
-</p>
-<p>
-<a target="_blank" rel="noreferrer noopener" href="https://nextcloud.com/federation#gary@cloud.gwilliams94.co.uk" style="padding:10px;background-color:#0082c9;color:#ffffff;border-radius:3px;padding-left:4px;">
-<span style="background-image:url(https://cloud.gwilliams94.co.uk/core/img/logo.svg);width:50px;height:30px;position:relative;top:8px;background-size:contain;display:inline-block;background-repeat:no-repeat; background-position: center center;"></span>
-Share with me via Nextcloud</a>
 </p>
 </center>
 </body>
