Updated title tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Gary Williams - www.gwilliams94.co.uk</title>
+<title>Gary Williams - @ThisGeekTweets</title>
 <link rel="stylesheet" href="styles.css">
 <!-Icons made by Freepik from Flaticon. Flaticon.com is licensed by Creative Commons 3.0-!>
 </head>
