Specify background colour

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="styles.css">
 <!-Icons made by Freepik from Flaticon. Flaticon.com is licensed by Creative Commons 3.0-!>
 </head>
-<body>
+<body bgcolor="#ffffff">
 
 <center><h1><font size=30>Gary Williams</h1></font>
 <p><img src=./images/me.jpg></p>
