--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 <br>Person of the internet.</p>
 </blockquote>
 <p>
-<a href="https://twitter.com/ThisGeekTweets" target=_blank><img border="0" alt="Twitter" src="./images/twitter.png" width="50" height="50"></a>
-&nbsp &nbsp &nbsp &nbsp
-<a href="https://www.linkedin.com/in/gary-williams-99ab1693/" target=_blank><img border="0" alt="LinkedIn" src="./images/linkedin.png" width="50" height="50"></a>
-&nbsp &nbsp &nbsp &nbsp
-<a href="https://www.instagram.com/creep5ncrawl5/" target=_blank><img border="0" alt="Instagram" src="./images/Instagram.png" width="50" height="50"></a>
-&nbsp &nbsp &nbsp &nbsp
-<a href="mailto:gary@gwilliams94.co.uk?Subject=Website" target=_blank><img border="0" alt="Email" src="./images/email.png" width="50" height="50"></a>
-&nbsp &nbsp &nbsp &nbsp
-<a href="https://plus.google.com/u/1/107245017226866264513" target=_blank><img border="0" alt="G+" src="./images/gplus.png" width="50" height="50"></a>
-&nbsp &nbsp &nbsp &nbsp
-<a href="https://www.reddit.com/user/gwilliams94" target=_blank><img border="0" alt="Reddit" src="./images/reddit.png" width="50" height="50"></a>
-&nbsp &nbsp &nbsp &nbsp
-<a href="skype:gwilliams94?add" target=_blank><img border="0" alt="Skype" src="./images/skype.png" width="50" height="50"></a>
-&nbsp &nbsp &nbsp &nbsp
-<a href="http://telegram.me/gwilliams94" target=_blank><img border="0" alt="Telegram" src="./images/telegram.png" width="50" height="50"></a>
-&nbsp &nbsp &nbsp &nbsp
-<a href="https://open.spotify.com/user/gwilliams94" target=_blank><img border="0" alt="Spotify" src="./images/spotify.png" width="50" height="50"></a>
-&nbsp &nbsp &nbsp &nbsp
-<a href="https://github.com/thisgeektweets" target=_blank><img border="0" alt="Github" src="./images/github.png" width="50" height="50"></a>
-&nbsp &nbsp &nbsp &nbsp
-<a href="https://cloud.gwilliams94.co.uk/index.php/s/FTbpNx7LNj25sST" target=_blank><img border="0" alt="My CV" src="./images/cv.png" width="50" height="50"></a>
+<a href="https://twitter.com/ThisGeekTweets" target=_blank><img  alt="Twitter" src="./images/twitter.png" width="50" height="50"></a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://www.linkedin.com/in/gary-williams-99ab1693/" target=_blank><img  alt="LinkedIn" src="./images/linkedin.png" width="50" height="50"></a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://www.instagram.com/creep5ncrawl5/" target=_blank><img  alt="Instagram" src="./images/Instagram.png" width="50" height="50"></a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="mailto:gary@gwilliams94.co.uk?Subject=Website" target=_blank><img  alt="Email" src="./images/email.png" width="50" height="50"></a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://plus.google.com/u/1/107245017226866264513" target=_blank><img  alt="G+" src="./images/gplus.png" width="50" height="50"></a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://www.reddit.com/user/gwilliams94" target=_blank><img  alt="Reddit" src="./images/reddit.png" width="50" height="50"></a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="skype:gwilliams94?add" target=_blank><img  alt="Skype" src="./images/skype.png" width="50" height="50"></a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="http://telegram.me/gwilliams94" target=_blank><img  alt="Telegram" src="./images/telegram.png" width="50" height="50"></a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://open.spotify.com/user/gwilliams94" target=_blank><img  alt="Spotify" src="./images/spotify.png" width="50" height="50"></a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://github.com/thisgeektweets" target=_blank><img  alt="Github" src="./images/github.png" width="50" height="50"></a>
+&nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://cloud.gwilliams94.co.uk/index.php/s/FTbpNx7LNj25sST" target=_blank><img  alt="My CV" src="./images/cv.png" width="50" height="50"></a>
 </p>
 </center>
 </body>
