Compliance fixes/CSS

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8"> 
 <title>Gary Williams - @ThisGeekTweets</title>
 <link rel="stylesheet" href="styles.css">
-<!-Icons made by Freepik from Flaticon. Flaticon.com is licensed by Creative Commons 3.0-!>
+<!-- Icons made by Freepik from Flaticon. Flaticon.com is licensed by Creative Commons 3.0 -->
 </head>
-<body bgcolor="#ffffff">
-
-<center><h1><font size=30>Gary Williams</h1></font>
-<p><img src=./images/me.jpg></p>
+<body>
+<h1>Gary Williams</h1>
+<h2>@ThisGeekTweets</h2>
+<p><img alt="Gary Williams - @ThisGeekTweets" src=./images/me.jpg></p>
 <blockquote>
 <p>FOSS Advocate.
 <br>DevOps Engineer.
@@ -37,7 +38,6 @@
 &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="https://cloud.gwilliams94.co.uk/index.php/s/FTbpNx7LNj25sST" target=_blank><img  alt="My CV" src="./images/cv.png" width="50" height="50"></a>
 </p>
-</center>
 </body>
 </html>
 
