--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <p>
 <a href="https://twitter.com/ThisGeekTweets" target=_blank><img  alt="Twitter" src="./images/twitter.png" width="50" height="50"></a>
 &nbsp; &nbsp; &nbsp; &nbsp;
-<a href="https://www.linkedin.com/in/gary-williams-99ab1693/" target=_blank><img  alt="LinkedIn" src="./images/linkedin.png" width="50" height="50"></a>
+<a href="https://www.linkedin.com/in/gary-w-99ab1693/" target=_blank><img  alt="LinkedIn" src="./images/linkedin.png" width="50" height="50"></a>
 &nbsp; &nbsp; &nbsp; &nbsp;
-<a href="https://www.instagram.com/creep5ncrawl5/" target=_blank><img  alt="Instagram" src="./images/Instagram.png" width="50" height="50"></a>
+<a href="https://www.instagram.com/ThisGeekTweets/" target=_blank><img  alt="Instagram" src="./images/Instagram.png" width="50" height="50"></a>
 &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="mailto:gary@gwilliams94.co.uk?Subject=Website" target=_blank><img  alt="Email" src="./images/email.png" width="50" height="50"></a>
 &nbsp; &nbsp; &nbsp; &nbsp;
@@ -32,7 +32,7 @@
 &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="https://github.com/thisgeektweets" target=_blank><img  alt="Github" src="./images/github.png" width="50" height="50"></a>
 &nbsp; &nbsp; &nbsp; &nbsp;
-<a href="https://cloud.gwilliams94.co.uk/index.php/s/FTbpNx7LNj25sST" target=_blank><img  alt="My CV" src="./images/cv.png" width="50" height="50"></a>
+<a href="https://nextcloud.gwilliams94.co.uk/s/SYzdno4esmapadi" target=_blank><img  alt="My CV" src="./images/cv.png" width="50" height="50"></a>
 </p>
 </body>
 </html>
