--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="https://github.com/thisgeektweets" target=_blank><img  alt="Github" src="./images/github.png" width="50" height="50"></a>
 &nbsp; &nbsp; &nbsp; &nbsp;
-<a href="https://drive.google.com/file/d/1SglIpg3A-eU43Or9m__M7GAAbGg5adXI/view?usp=sharing" target=_blank><img  alt="My CV" src="./images/cv.png" width="50" height="50"></a>
+<a href="https://cloud.gwilliams94.co.uk/index.php/s/DsQtKJTcdbyAe5J" target=_blank><img  alt="My CV" src="./images/cv.png" width="50" height="50"></a>
 </p>
 </body>
 </html>
